<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/language_switch"
            android:icon="@drawable/ic_menu_language"
            android:title="@string/language_switch" />
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_name_feedback"
                android:title="@string/nav_setting_feedback" />
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_menu_update"
                android:title="@string/navigation_update" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/navigation_about" />
        </menu>
    </item>

</menu>
